--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,9 @@ dist/
 *.pem
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 
 # debug
 npm-debug.log*
@@ -29,5 +29,27 @@ yarn-debug.log*
 yarn-error.log*
 
 # IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Google API 憑證
+credentials.json
+
+# 環境變量
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# 日誌文件
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 編輯器配置
 .idea/
 .vscode/ 
