--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
     "googleapis": "^146.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
