--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^x.x.x"
   }
 }
