更新構建配置和依賴

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dotenv": "^16.4.7",
     "googleapis": "^146.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "react": "^18.x.x",
+    "react-dom": "^18.x.x"
   },
   "scripts": {
     "dev": "vite",
@@ -13,6 +15,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^x.x.x"
+    "@vitejs/plugin-react": "^4.x.x",
+    "vite": "^4.x.x"
   }
 }
