--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "booking-system",
+  "private": true,
+  "version": "0.0.1",
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
     "@types/node": "^22.13.10",
