--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
     "@types/node": "^22.13.10",
+    "date-fns": "^2.x.x",
     "dotenv": "^16.4.7",
     "googleapis": "^146.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   },
   "scripts": {
     "dev": "vite",
