--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,3 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
 # 環境變量
 .env
 .env.local
@@ -42,11 +8,24 @@ google-credentials.json
 *.json.key
 credentials/
 
+# 依賴目錄
+node_modules/
+
 # 構建輸出
+.next/
+out/
+build/
 dist/
 
 # 日誌
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 操作系統文件
+.DS_Store
+Thumbs.db
 
 # IDE 配置
 .idea/
